--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -23,8 +23,8 @@ ssh:
 #
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
 proxy:
-  ssl: true
-  host: app.example.com
+  ssl: false
+  host: 34.234.26.163
 
 # Credentials for your image host.
 registry:
