--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -7,12 +7,12 @@ image: harishankars/blog
 # Deploy to these servers.
 servers:
   web:
-    - 34.234.26.163
+    - 54.163.31.234
 
 ssh:
   user: ubuntu # Specify the correct user for your EC2 instance
   keys:
-    - ~/.ssh/ec2-16-nov.pem # Path to your EC2 private key
+    - ~/Downloads/EC2-tutorial.pem # Path to your EC2 private key
   # job:
   #   hosts:
   #     - 192.168.0.1
@@ -24,7 +24,7 @@ ssh:
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
 proxy:
   ssl: false
-  host: 34.234.26.163
+  host: 54.163.31.234
 
 # Credentials for your image host.
 registry:
